@@ -8,11 +8,15 @@ module Spec
           @io = StringIO.new
           @formatter = FailingBehavioursFormatter.new(@io)
         end
+        
+        def description(s)
+          Spec::DSL::Description.new(s)
+        end
 
         it "should add example name for each failure" do
-          @formatter.add_behaviour("b 1")
+          @formatter.add_behaviour(description("b 1"))
           @formatter.example_failed("e 1", nil, Reporter::Failure.new(nil, RuntimeError.new))
-          @formatter.add_behaviour("b 2")
+          @formatter.add_behaviour(description("b 2"))
           @formatter.example_failed("e 2", nil, Reporter::Failure.new(nil, RuntimeError.new))
           @formatter.example_failed("e 3", nil, Reporter::Failure.new(nil, RuntimeError.new))
           @io.string.should eql(<<-EOF
