@@ -14,6 +14,10 @@ module Spec
       def failure
         Mocks::DuckTypeArgConstraint.new(:header, :exception)
       end
+      
+      def description(s)
+        Spec::DSL::Description.new(s)
+      end
     end
     
     describe Reporter do
@@ -21,8 +25,8 @@ module Spec
       before(:each) {setup}
       
       it "should tell formatter when behaviour is added" do
-        @formatter.should_receive(:add_behaviour).with("behaviour")
-        @reporter.add_behaviour("behaviour")
+        @formatter.should_receive(:add_behaviour).with(description("behaviour"))
+        @reporter.add_behaviour(description("behaviour"))
       end
 
       it "should handle multiple behaviours with same name" do
@@ -31,13 +35,13 @@ module Spec
         @formatter.should_receive(:example_passed).exactly(3).times
         @formatter.should_receive(:start_dump)
         @formatter.should_receive(:dump_summary).with(anything(), 3, 0, 0)
-        @reporter.add_behaviour("behaviour")
+        @reporter.add_behaviour(description("behaviour"))
         @reporter.example_started("spec 1")
         @reporter.example_finished("spec 1")
-        @reporter.add_behaviour("behaviour")
+        @reporter.add_behaviour(description("behaviour"))
         @reporter.example_started("spec 2")
         @reporter.example_finished("spec 2")
-        @reporter.add_behaviour("behaviour")
+        @reporter.add_behaviour(description("behaviour"))
         @reporter.example_started("spec 3")
         @reporter.example_finished("spec 3")
         @reporter.dump
@@ -53,10 +57,10 @@ module Spec
         @formatter.should_receive(:start_dump)
         @formatter.should_receive(:dump_summary).with(anything(), 4, 2, 0)
         @backtrace_tweaker.should_receive(:tweak_backtrace).twice
-        @reporter.add_behaviour("behaviour")
+        @reporter.add_behaviour(description("behaviour"))
         @reporter.example_finished("example")
         @reporter.example_finished("example", error)
-        @reporter.add_behaviour("behaviour")
+        @reporter.add_behaviour(description("behaviour"))
         @reporter.example_finished("example")
         @reporter.example_finished("example", error)
         @reporter.dump
@@ -125,7 +129,7 @@ module Spec
         @formatter.should_receive(:start_dump)
         @formatter.should_receive(:dump_failure).with(1, anything())
         @formatter.should_receive(:dump_summary).with(anything(), 1, 1, 0)
-        @reporter.add_behaviour("behaviour")
+        @reporter.add_behaviour(description("behaviour"))
         @reporter.example_finished("example", RuntimeError.new)
         @reporter.dump
       end
@@ -137,18 +141,18 @@ module Spec
       before(:each) {setup}
 
       it "should tell formatter example is pending" do
-        @formatter.should_receive(:example_pending).with("behaviour", "example", "Not Yet Implemented")
-        @formatter.should_receive(:add_behaviour).with("behaviour")
-        @reporter.add_behaviour('behaviour')
+        @formatter.should_receive(:example_pending).with(description("behaviour"), "example", "Not Yet Implemented")
+        @formatter.should_receive(:add_behaviour).with(description("behaviour"))
+        @reporter.add_behaviour(description('behaviour'))
         @reporter.example_finished("example", nil, nil, true)
       end
 
       it "should account for pending example in stats" do
-        @formatter.should_receive(:example_pending).with("behaviour", "example", "Not Yet Implemented")
+        @formatter.should_receive(:example_pending).with(description("behaviour"), "example", "Not Yet Implemented")
         @formatter.should_receive(:start_dump)
         @formatter.should_receive(:dump_summary).with(anything(), 1, 0, 1)
-        @formatter.should_receive(:add_behaviour).with("behaviour")
-        @reporter.add_behaviour('behaviour')
+        @formatter.should_receive(:add_behaviour).with(description("behaviour"))
+        @reporter.add_behaviour(description('behaviour'))
         @reporter.example_finished("example", nil, nil, true)
         @reporter.dump
       end
@@ -159,18 +163,18 @@ module Spec
       before(:each) {setup}
 
       it "should tell formatter example is pending" do
-        @formatter.should_receive(:example_pending).with("behaviour", "example", "reason")
-        @formatter.should_receive(:add_behaviour).with("behaviour")
-        @reporter.add_behaviour('behaviour')
+        @formatter.should_receive(:example_pending).with(description("behaviour"), "example", "reason")
+        @formatter.should_receive(:add_behaviour).with(description("behaviour"))
+        @reporter.add_behaviour(description('behaviour'))
         @reporter.example_finished("example", Spec::DSL::ExamplePendingError.new("reason"), nil, false)
       end
 
       it "should account for pending example in stats" do
-        @formatter.should_receive(:example_pending).with("behaviour", "example", "reason")
+        @formatter.should_receive(:example_pending).with(description("behaviour"), "example", "reason")
         @formatter.should_receive(:start_dump)
         @formatter.should_receive(:dump_summary).with(anything(), 1, 0, 1)
-        @formatter.should_receive(:add_behaviour).with("behaviour")
-        @reporter.add_behaviour('behaviour')
+        @formatter.should_receive(:add_behaviour).with(description("behaviour"))
+        @reporter.add_behaviour(description('behaviour'))
         @reporter.example_finished("example", Spec::DSL::ExamplePendingError.new("reason"), nil, false)
         @reporter.dump
       end
@@ -184,8 +188,8 @@ module Spec
         @formatter.should_receive(:example_failed) do |name, counter, failure|
           failure.header.should == "'behaviour example' FIXED"
         end
-        @formatter.should_receive(:add_behaviour).with("behaviour")
-        @reporter.add_behaviour('behaviour')
+        @formatter.should_receive(:add_behaviour).with(description("behaviour"))
+        @reporter.add_behaviour(description('behaviour'))
         @reporter.example_finished("example", Spec::DSL::PendingFixedError.new("reason"), nil, false)
       end
     end
